OO-3290: add search and filter in the curriculum composer